--- a/pomodoro/pomodoro.vcxproj
+++ b/pomodoro/pomodoro.vcxproj
@@ -187,6 +187,9 @@
     </ResourceCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="CPropPageSettings.h" />
+    <ClInclude Include="CPropPageStats.h" />
+    <ClInclude Include="CPropPageWork.h" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="pomodoro.h" />
@@ -195,6 +198,9 @@
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="CPropPageSettings.cpp" />
+    <ClCompile Include="CPropPageStats.cpp" />
+    <ClCompile Include="CPropPageWork.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
@@ -208,6 +214,7 @@
     <ResourceCompile Include="pomodoro.rc" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="PropertySheet.props" />
     <None Include="res\pomodoro.rc2" />
   </ItemGroup>
   <ItemGroup>
